Bug 151715 - Tabbed UI: opening a read-only file (XLS or XLSX from mail) and switching to edit, buttons remain disabled
Summary: Tabbed UI: opening a read-only file (XLS or XLSX from mail) and switching to ...
Status: CLOSED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
7.3.0.0 alpha1+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.6.0 target:7.5.4
Keywords: bibisected, bisected, regression
: 154617 (view as bug list)
Depends on:
Blocks: Notebookbar-Tabbed Read-Only Thunderbird-Interoperability
  Show dependency treegraph
 
Reported: 2022-10-23 13:08 UTC by Marco Colnaghi
Modified: 2023-07-20 05:57 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Marco Colnaghi 2022-10-23 13:08:45 UTC
Description:
With tabbed toolbars opening a readonly file (xls from mail) and switching to edit mode does not enter in real edit mode

Steps to Reproduce:
1.put LO in tabbed mode toolbars
2.open xls from mail
3.at the bar offer switch to edit mode


Actual Results:
the doc is not in real edit mode (the option seem activated but is not real),
you cannot insert filters, pivot table etc...
Titlebar still reports "(read only)"

Expected Results:
the doc should change to edit mode


Reproducible: Always


User Profile Reset: Yes

Additional Info:
using standard toolbar configuration seem work regularly
Comment 1 Marco Colnaghi 2022-11-12 08:13:42 UTC
I tested again and noted that
tabbed toolbar and tabbed conpact (maybe others) are not updated (buttons state) when switching from readonly to edit mode forthe document.
Comment 2 Buovjaga 2023-03-01 14:54:17 UTC
Bibisected with linux-64-7.3 to 5b5fb5e9c0580ecb70cf65882865bdaf16498fa5
sfx2: do reload on SID_EDITDOC in SfxViewFrame::ExecReload_Impl()
Comment 3 Stéphane Guillou (stragu) 2023-04-11 12:01:16 UTC
*** Bug 154617 has been marked as a duplicate of this bug. ***
Comment 4 Stéphane Guillou (stragu) 2023-04-11 12:10:39 UTC
Same issue for XLSX, as tested with:

Version: 7.5.2.2 (X86_64) / LibreOffice Community
Build ID: 53bb9681a964705cf672590721dbc85eb4d0c3a2
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded

ODS not affected. Writer not affected.

Duplicate bug 154617 reports same for Windows -> marking as affecting All.

Michael, any thoughts on this one?
Comment 5 Commit Notification 2023-04-27 13:45:24 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/ed4d4d47ea322236199b1f8ff97ddd945b099cbe

tdf#151715 sfx2: do not use FORCERELOAD for document stored in /tmp

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Michael Stahl 2023-04-27 13:48:01 UTC
fixed on master
Comment 7 Stéphane Guillou (stragu) 2023-04-28 10:19:59 UTC
Fix verified in:

Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 2e57755f72907e4bb604a8ba32edbd6c253ee57c
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded

Thanks everyone!
Comment 8 Commit Notification 2023-05-04 08:19:14 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-7-5":

https://git.libreoffice.org/core/commit/a5dae844003e80411ffbfe0d873fdccfb9c3d560

tdf#151715 sfx2: do not use FORCERELOAD for document stored in /tmp

It will be available in 7.5.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.